--- a/ecommerce_rest_api/requirements.txt
+++ b/ecommerce_rest_api/requirements.txt
@@ -1,11 +1,11 @@
-altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/altgraph-0.17.2-py2.py3-none-any.whl
 asgiref==3.6.0
 dj-database-url==1.3.0
 Django==4.2
-future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/future-0.18.2-py3-none-any.whl
+django-cors-headers==3.14.0
+djangorestframework==3.14.0
 gunicorn==20.1.0
-macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/macholib-1.15.2-py2.py3-none-any.whl
-six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/six-1.15.0-py2.py3-none-any.whl
-sqlparse==0.4.4
+psycopg2-binary==2.9.6
+pytz==2023.3
+sqlparse==0.4.3
 typing_extensions==4.5.0
 whitenoise==6.4.0
